Add pgadmin to doker

--- a/.env
+++ b/.env
@@ -6,3 +6,8 @@ DB_PASSWORD=admin
 DB_USERNAME=admin
 DB_DATABASE_NAME=rewards_program
 DB_PORT=5432
+
+# pgadmin
+PGADMIN_DEFAULT_EMAIL=admin@admin.com
+PGADMIN_DEFAULT_PASSWORD=admin
+PGADMIN_DEFAULT_PORT=5050
