--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
       "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
       "test:e2e": "jest --config ./test/jest-e2e.json",
       "docker:build": "docker build -t rewards-program .",
-      "docker:compose": "docker-compose up --build -V"
+      "docker:compose": "docker-compose up --build -V",
+      "typeorm": "typeorm-ts-node-commonjs"
    },
    "dependencies": {
       "@nestjs/common": "^9.0.0",
       "@nestjs/core": "^9.0.0",
       "@nestjs/platform-express": "^9.0.0",
       "@nestjs/typeorm": "^9.0.0",
+      "dotenv": "^16.0.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "rimraf": "^3.0.2",
