--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
       "docker:build": "docker build -t rewards-program .",
       "docker:compose": "docker-compose up --build -V",
       "typeorm": "typeorm-ts-node-commonjs",
-      "seed": "ts-node ./src/seed/seed.ts"
+      "seed": "ts-node ./src/seed/definedSeed.ts",
+      "randomSeed": "ts-node ./src/seed/randomSeed.ts"
    },
    "dependencies": {
       "@nestjs/common": "^9.0.0",
