--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
       "@nestjs/common": "^9.0.0",
       "@nestjs/core": "^9.0.0",
       "@nestjs/platform-express": "^9.0.0",
+      "@nestjs/swagger": "^6.0.5",
       "@nestjs/typeorm": "^9.0.0",
       "dotenv": "^16.0.1",
       "pg": "^8.4.0",
