--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ DB_PORT=5432
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
 PGADMIN_DEFAULT_PASSWORD=admin
 PGADMIN_DEFAULT_PORT=5050
+
+# health-check
+HEALTH_SERVICE_URL=http://main:3000/rewards
