--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
       "randomSeed": "ts-node ./src/seed/randomSeed.ts"
    },
    "dependencies": {
+      "@nestjs/axios": "^0.1.0",
       "@nestjs/common": "^9.0.0",
       "@nestjs/core": "^9.0.0",
       "@nestjs/platform-express": "^9.0.0",
       "@nestjs/swagger": "^6.0.5",
+      "@nestjs/terminus": "^9.1.1",
       "@nestjs/typeorm": "^9.0.0",
       "dotenv": "^16.0.1",
       "pg": "^8.4.0",
